docs: fix mobile nav overflow

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -464,6 +464,7 @@ nav {
   margin: 0;
   padding: 0;
   list-style: none;
+  overflow: hidden;
 }
 
 h1 {
@@ -492,8 +493,39 @@ h1 {
   margin: 0 0 1.312rem 0;
 }
 
+.scroll-indicator {
+  display: none;
+}
+
+.github-corner {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.github-corner:hover .octo-arm{
+  animation: octocat-wave 560ms ease-in-out;
+}
+
+@keyframes octocat-wave {
+  0%,100% { transform: rotate(0); }
+  20%,60% { transform: rotate(-25deg); }
+  40%,80% { transform: rotate(10deg); }
+}
+
+@media (max-width:500px) {
+  .github-corner:hover .octo-arm {
+    animation: none;
+  }
+
+  .github-corner .octo-arm {
+    animation: octocat-wave 560ms ease-in-out;
+  }
+}
+
 @media screen and (min-width: 620px) {
   #menu {
+    overflow: visible;
     visibility: visible;
   }
 
